Wrapping data in program objects

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,8 +1,14 @@
+
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <font color="red"><li><%= bookmark %></li></font>
+    <li>
+      <a href="<%= bookmark.url %>">
+         <font color="red"><li><%= bookmark.title %></li></font>
+      </a>
+    </li>
   <% end %>
 </ul>
+
 <html>
 <body background="https://i.pinimg.com/originals/30/43/12/30431252bfb916c5700f78483c09074e.jpg">
 </body>
