--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -11,5 +11,8 @@
 
 <html>
 <body background="https://i.pinimg.com/originals/30/43/12/30431252bfb916c5700f78483c09074e.jpg">
+  <form action="/bookmarks/add">
+     <button type="submit">Add Bookmark</button>
+  </form>
 </body>
 </html>
